log
Tue, Mar 25, 2025  1:06:13 PM: 
 list.c | 18 +++++++++++++++---
 1 file changed, 15 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:40:14: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     if (list = NULL || list->head == NULL) return NULL;
              ^
list.c:40:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if (list = NULL || list->head == NULL) return NULL;
     ^~
cc1.exe: all warnings being treated as errors
Compilation failed
25021aa
Tue, Mar 25, 2025  1:06:27 PM: 
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:40:14: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     if (list = NULL || list->head == NULL) return NULL;
              ^
list.c:40:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if (list = NULL || list->head == NULL) return NULL;
     ^~
cc1.exe: all warnings being treated as errors
Compilation failed
1cb99af
Tue, Mar 25, 2025  1:06:40 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bb85816
Tue, Mar 25, 2025  1:08:16 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function 'pushBack':
list.c:68:39: error: 'return' with a value, in function returning void [-Werror]
     if (list->current == NULL) return NULL;
                                       ^~~~
list.c:67:6: note: declared here
 void pushBack(List * list, void * data) {
      ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
41b8a8d
Tue, Mar 25, 2025  1:08:43 PM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
0bbac6b
Tue, Mar 25, 2025  1:10:14 PM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
2fd03e7
Tue, Mar 25, 2025  1:11:04 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
16b3aa7
Wed, Mar 26, 2025 11:10:22 AM: 
./test.sh: line 26: gcc: command not found
Compilation failed
39b2b3b
Wed, Mar 26, 2025 11:10:39 AM: 
./test.sh: line 26: gcc: command not found
Compilation failed
391f563
Fri, Mar 28, 2025 10:01:14 AM: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
d28f841
Fri, Mar 28, 2025 10:06:09 AM: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
283c968
Fri, Mar 28, 2025 10:07:16 AM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
3c85380
Fri, Mar 28, 2025 10:17:00 AM: 
 list.c | 14 ++++++--------
 1 file changed, 6 insertions(+), 8 deletions(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:55:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if (list->tail = NULL) return NULL;
     ^~
cc1.exe: all warnings being treated as errors
Compilation failed
76e5c14
